L12 Small refactor