@@ -5,6 +5,7 @@ import org.geekhub.crypto.exception.CodecUnsupportedException;
 import org.geekhub.crypto.logging.Logger;
 import org.geekhub.crypto.logging.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 
 
@@ -13,15 +14,18 @@ public class DecodersFactory {
         if (name == null) {
             throw new CodecUnsupportedException("Unsupported decoder");
         }
-        List<Class<?>> classes = ClassParser.getClasses();
+        List<Class<?>> classes = ClassParser.matchingClasses;
         Logger logger = LoggerFactory.getLogger();
 
         for (Class<?> currentClass : classes) {
             Codec codec = currentClass.getAnnotation(Codec.class);
             if (codec.algorithm() == name && Decoder.class.isAssignableFrom(currentClass)) {
                 try {
-                    return (Decoder) FieldInitialiser.initialiseFields(currentClass.newInstance());
-                } catch (IllegalAccessException | InstantiationException e) {
+                    return (Decoder) FieldInitialiser.initialiseFields(
+                            currentClass.getDeclaredConstructor().newInstance()
+                    );
+                } catch (IllegalAccessException | InstantiationException |
+                        NoSuchMethodException | InvocationTargetException e) {
                     logger.warn(e.getMessage());
                 }
             }
